--- a/wdshop/build.gradle
+++ b/wdshop/build.gradle
@@ -64,5 +64,5 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     //glide加载图片依赖
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.github.xiaohaibin:XBanner:1.6.1'
+    implementation 'com.xhb:xbanner:1.5.1'
 }
