--- a/wdshop/build.gradle
+++ b/wdshop/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     //glide加载图片依赖
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.xhb:xbanner:1.5.1'
+    implementation 'com.youth.banner:banner:1.4.9'
 }
