--- a/wdshop/src/main/AndroidManifest.xml
+++ b/wdshop/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.wdshop">
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -17,7 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".login.activity.LoginActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,14 +28,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.RegisterActivity"
+            android:name=".register.activity.RegisterActivity"
             android:launchMode="singleTask" />
         <activity
             android:name=".activity.HomeActivity"
             android:launchMode="singleTask" />
         <activity android:name=".activity.PresonalDataActivity" />
         <activity android:name=".activity.ParticularsActivity" />
-        <activity android:name=".activity.FootPrintActivity"></activity>
+        <activity android:name=".activity.FootPrintActivity" />
+        <activity android:name=".activity.WalletActivity"></activity>
     </application>
 
 </manifest>
