--- a/wdshop/build.gradle
+++ b/wdshop/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.xhb:xbanner:1.5.1'
     implementation 'com.youth.banner:banner:1.4.9'
+    /*滑动删除*/
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 }
