--- a/wdshop/src/main/AndroidManifest.xml
+++ b/wdshop/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -45,6 +46,7 @@
         <activity android:name=".shoppingcart.activity.CloseActivity"/>
         <activity android:name=".order.activity.PayMentActivity"/>
         <activity android:name=".shoppingcart.activity.DepailActivity"/>
+        <activity android:name=".order.activity.RemaitActivity"/>
     </application>
 
 </manifest>
