--- a/wdshop/build.gradle
+++ b/wdshop/build.gradle
@@ -13,6 +13,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        packagingOptions {
+            exclude 'META-INF/rxjava.properties'
+        }
 
     }
 
@@ -70,4 +73,6 @@ dependencies {
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
     //三级联动
     implementation 'liji.library.dev:citypickerview:0.7.0'
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+
 }
